--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-i
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cultivo de Abacate</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Cultivo de Abacate: Guia Completo</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre o Abacate</a></li>
+                <li><a href="#plantio">Plantio</a></li>
+                <li><a href="#cuidados">Cuidados e Manutenção</a></li>
+                <li><a href="#colheita">Colheita e Armazenamento</a></li>
+                <li><a href="#receitas">Receitas e Uso</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="sobre">
+            <h2>Sobre o Abacate</h2>
+            <p>Conheça o abacate, um fruto nutritivo e saboroso. Descubra suas origens, benefícios para a saúde e variedades populares.</p>
+            <h3>História e Origem do Abacate</h3>
+            <p>O abacate é nativo da América Central e do Sul...</p>
+            <!-- Adicione mais conteúdo aqui -->
+        </section>
+
+        <section id="plantio">
+            <h2>Como Plantar Abacates: Passo a Passo</h2>
+            <p>Aprenda como plantar um abacateiro, desde a escolha do local até o preparo do solo.</p>
+            <!-- Adicione mais conteúdo aqui -->
+        </section>
+
+        <section id="cuidados">
+            <h2>Cuidados Essenciais para um Abacateiro Saudável</h2>
+            <p>Descubra como manter seu abacateiro saudável e produtivo ao longo do ano.</p>
+            <!-- Adicione mais conteúdo aqui -->
+        </section>
+
+        <section id="colheita">
+            <h2>Quando e Como Colher Abacates</h2>
+            <p>Saiba quando é o momento certo para colher seus abacates e como armazená-los adequadamente.</p>
+            <!-- Adicione mais conteúdo aqui -->
+        </section>
+
+        <section id="receitas">
+            <h2>Receitas Deliciosas com Abacate</h2>
+            <p>Aproveite suas colheitas com estas receitas fáceis e deliciosas.</p>
+            <!-- Adicione mais conteúdo aqui -->
+        </section>
+
+        <section id="faq">
+            <h2>Perguntas Frequentes sobre o Cultivo de Abacate</h2>
+            <p>Respostas para as dúvidas mais comuns sobre o cultivo e cuidados com o abacateiro.</p>
+            <!-- Adicione mais conteúdo aqui -->
+        </section>
+
+        <section id="contato">
+            <h2>Entre em Contato</h2>
+            <p>Tem dúvidas ou precisa de mais informações? Entre em contato conosco!</p>
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Cultivo de Abacate. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
+
